--- a/resources/css/front_page.css
+++ b/resources/css/front_page.css
@@ -8,20 +8,25 @@
 
 body {
     overflow: hidden;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    background-image: url('mac.jpg');
     color: #333;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: -1;
 }
 
 .desktop-background{
     width: 10%;
-    z-index: -1;
 }
 
 .desktop-background img{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 /* Menu Bar Styles */
