--- a/resources/css/index_linker.css
+++ b/resources/css/index_linker.css
@@ -6,12 +6,24 @@
     font-family: "Roboto", sans-serif;
 }
 
-/* Page Layout */
-html, body {
-    width: 100%;
+body, html {
     height: 100%;
+    width: 100%;
     overflow: hidden;
-    background: #000;
+}
+body{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    background-image: url('mac.jpg');
+    color: #333;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: -1;
 }
 
 /* Lock Screen Styles */
@@ -36,6 +48,9 @@ html, body {
 .user-name {
     font-size: 20px;
     margin-bottom: 20px;
+    margin-top: 10px;
+    text-align: center;
+    font-weight: 300;
 }
 
 /* Login Form */
@@ -60,11 +75,52 @@ html, body {
 input[type="submit"] {
     width: 50px;
     height: 50px;
+    font-size: 15px;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 5px;
     cursor: pointer;
     color: white;
     border: none;
+}
+#login:hover {
+    background: rgba(255, 255, 255, 0.3);
+    color: white;
+    font-size: 15px;
+    margin-top: 10px;
+    text-align: center;
+    font-weight: 300;
+}
+
+#login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 0.3rem;
+    border-radius: 5px;
+}
+input[type="submit"]:hover {
+    background: rgba(255, 255, 255, 0.3);
+}
+input[type="submit"]:active {
+    background: rgba(255, 255, 255, 0.4);
+}
+input[type="submit"]:focus {
+    outline: none;
+}
+
+input::placeholder{
+    color: white;
+    font-size: 15px;
+    text-align: center;
+    font-weight: 300;
+}
+input[type="text"] {
+    width: 250px; 
+    color: rgb(255, 253, 253);
+    font-size: 15px;
+    text-align: center;
 }
 
 /* Help Section */
